--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -146,7 +146,8 @@ jobs:
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=ON -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=OFF .. && make -j$(nproc) sqlalchemy_openmldb openmldb && cd ../
       - name: test sqlalchemy
         run: |
-          python3 -m easy_install nose sqlalchemy pip
+          python3 -m easy_install nose pip
+          yum install -y net-tools
           bash steps/fesql_test_python.sh
       - name: upload python ut results
         if: always()
@@ -154,7 +155,7 @@ jobs:
         with:
           name: linux-ut-result-python-${{ github.sha }}
           path: |
-            python/sqlalchemy-test/nosetests.xml
+            python/test/nosetests.xml
       - name: upload pysdk and whl
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
