--- a/test/batch-test/openmldb-batch-test/pom.xml
+++ b/test/batch-test/openmldb-batch-test/pom.xml
@@ -18,6 +18,7 @@
         <spark.version>3.0.0</spark.version>
         <openmldb.batch.version>0.3.0-allinone-SNAPSHOT</openmldb.batch.version>
         <openmldb.test.common.version>0.1.0-SNAPSHOT</openmldb.test.common.version>
+        <spark.dependencyScope>provided</spark.dependencyScope>
     </properties>
 
     <repositories>
