--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -45,6 +45,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 		<scala.version>2.12.8</scala.version>
 		<scala.binary.version>2.12</scala.binary.version>
+		<hadoop.version>2.7.1</hadoop.version>
 		<spark.version>3.0.0</spark.version>
 		<spark.dependencyScope>provided</spark.dependencyScope>
 		<default.project.version>0.2.3</default.project.version>
@@ -174,7 +175,7 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-common</artifactId>
-			<version>2.8.5</version>
+			<version>${hadoop.version}</version>
 		</dependency>
 
 		<!-- Iceberg -->
