--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -11,7 +11,6 @@ on:
       - .github/workflows/hybridse-ci.yml
       - cases/**/*
       - hybridse/**/*
-      - hybridse/java/**/*
   workflow_dispatch:
 
 defaults:
@@ -232,7 +231,7 @@ jobs:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     needs: ["macos-build"]
     if: >
-      success() && ({{ env.force_deploy_java_allinone }} || github.event_name == 'push')
+      success() && (${{ env.force_deploy_java_allinone }} || github.event_name == 'push')
     steps:
       - uses: actions/checkout@v2
         with:
