--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -230,8 +230,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     needs: ["macos-build"]
-    if: >
-      success() && ( env.force_deploy_java_allinone == 'true' || github.event_name == 'push')
+    if: ${{ success() && ( env.force_deploy_java_allinone == 'true' || github.event_name == 'push') }}
     steps:
       - uses: actions/checkout@v2
         with:
