--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -265,7 +265,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: python-artifacts
-      # download only one file, openmldb-*.whl
+      # download only one file, so no dir, just openmldb-*.whl
       - name: upload to pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
