--- a/src/sdk/CMakeLists.txt
+++ b/src/sdk/CMakeLists.txt
@@ -19,7 +19,7 @@ if(TESTING_ENABLE)
     set(HYBRIDSE_CASE_LIBS base_test hybridse_core hybridse_flags yaml-cpp)
 
     add_executable(cluster_sdk_test cluster_sdk_test.cc)
-    target_link_libraries(cluster_sdk_test ${BIN_LIBS} ) #${HYBRIDSE_CASE_LIBS} benchmark_main benchmark gtest)
+    target_link_libraries(cluster_sdk_test ${BIN_LIBS} ${HYBRIDSE_CASE_LIBS} benchmark_main benchmark gtest)
 
     add_executable(sql_router_test sql_router_test.cc)
     target_link_libraries(sql_router_test ${BIN_LIBS} ${HYBRIDSE_CASE_LIBS} benchmark_main benchmark gtest)
